--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
 <body>
     <nav>
             <div class="logo">
-                <img src="images/logo.png" alt="Company Logo">
+                <img src="images/logo(2).png" alt="Company Logo">
             </div>
             <div class="hamburger" onclick="toggleMenu()">
                 <div></div>
