--- a/index.html
+++ b/index.html
@@ -272,13 +272,19 @@
                 text-align: center;
             }
 
-            .hero h1 {
-                font-size: 2rem;
-            }
+            
+.hero h1 {
+        font-size: 2rem; /* Adjusted font size */
+    }
 
-            .hero p {
-                font-size: 1rem;
-            }
+    .hero p {
+        font-size: 1rem;
+    }
+
+    .hero button {
+        font-size: 1rem;
+        padding: 0.5rem 1rem;
+    }
 
             .features h2 {
                 font-size: 1.5rem;
