--- a/index.html
+++ b/index.html
@@ -461,6 +461,12 @@ nav {
             alert('Thank you for subscribing!');
             document.querySelector('.menu-toggle').addEventListener('click', function() {
     document.querySelector('.nav-links').classList.toggle('show');
+           
+    document.getElementById('hamburger').addEventListener('click', function() {
+        var navLinks = document.getElementById('nav-links');
+        navLinks.classList.toggle('active');
+
+
 });
         });
     </script>
