--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ nav {
     </style>
 </head>
 <body>
-    <header>
+     <header>
     <nav>
         <div class="logo">
             <img src="images/logo (2).png" alt="Company Logo">
@@ -365,89 +365,87 @@ nav {
         <div class="hero-content">
             <h1>Welcome to Our Writing Service</h1>
             <p>Your one-stop solution for all your writing needs</p>
-            <button class="learn-more-button" onclick="scrollToFeatures()">Learn More</button>
+            <button id="learnMoreButton" class="learn-more-button">Learn More</button>
         </div>
     </section>
 
-        <section class="features" id="features">
-            <h2>Why Choose Us?</h2>
-            <div class="feature">
-                <img src="images/TQ.png" alt="Top Quality">
-                <h3>Top Quality</h3>
-            </div>
-            <div class="feature">
-                <img src="images/plag-removebg-preview.png" alt="Plagiarism Free">
-                <h3>Plagiarism Free</h3>
-            </div>
-            <div class="feature">
-                <img src="images/s.jpeg" alt="Quality Work">
-                <h3>Quality Work</h3>
-            </div>
-            <div class="feature">
-                <img src="images/TD-removebg-preview.png" alt="Timely Delivery">
-                <h3>Timely Delivery</h3>
-            </div>
-            <div class="feature">
-                <img src="images/24.png" alt="24 Hour Support">
-                <h3>24 Hour Support</h3>
-            </div>
-            <div class="feature">
-                <img src="images/EXP-removebg-preview.png" alt="Expert Writers">
-                <h3>Expert Writers</h3>
-            </div>
-        </section>
+    <section class="features" id="features">
+        <h2>Why Choose Us?</h2>
+        <div class="feature">
+            <img src="images/TQ.png" alt="Top Quality">
+            <h3>Top Quality</h3>
+        </div>
+        <div class="feature">
+            <img src="images/plag-removebg-preview.png" alt="Plagiarism Free">
+            <h3>Plagiarism Free</h3>
+        </div>
+        <div class="feature">
+            <img src="images/s.jpeg" alt="Quality Work">
+            <h3>Quality Work</h3>
+        </div>
+        <div class="feature">
+            <img src="images/TD-removebg-preview.png" alt="Timely Delivery">
+            <h3>Timely Delivery</h3>
+        </div>
+        <div class="feature">
+            <img src="images/24.png" alt="24 Hour Support">
+            <h3>24 Hour Support</h3>
+        </div>
+        <div class="feature">
+            <img src="images/EXP-removebg-preview.png" alt="Expert Writers">
+            <h3>Expert Writers</h3>
+        </div>
+    </section>
 
-        <section class="testimonials">
-            <h2>What Our Clients Say</h2>
-            <div class="testimonial">
-                <p>"The service was exceptional! My essay was well-written and delivered on time. Highly recommend!"</p>
-                <span>- Jane Doe</span>
-            </div>
-            <div class="testimonial">
-                <p>"Professional and reliable. I received a high-quality paper with zero plagiarism."</p>
-                <span>- John Smith</span>
-            </div>
-            <div class="testimonial">
-                <p>"Excellent customer service and top-notch writing skills. I will definitely use this service again."</p>
-                <span>- Emily Johnson</span>
-            </div>
-        </section>
+    <section class="testimonials">
+        <h2>What Our Clients Say</h2>
+        <div class="testimonial">
+            <p>"The service was exceptional! My essay was well-written and delivered on time. Highly recommend!"</p>
+            <span>- Jane Doe</span>
+        </div>
+        <div class="testimonial">
+            <p>"Professional and reliable. I received a high-quality paper with zero plagiarism."</p>
+            <span>- John Smith</span>
+        </div>
+        <div class="testimonial">
+            <p>"Excellent customer service and top-notch writing skills. I will definitely use this service again."</p>
+            <span>- Emily Johnson</span>
+        </div>
+    </section>
 
-        <section class="faq">
-            <h2>Frequently Asked Questions</h2>
-            <div class="question">
-                <h3>What services do you offer?</h3>
-                <p>We offer a wide range of academic writing services including essays, research papers, dissertations, and more.</p>
-            </div>
-            <div class="question">
-                <h3>How can I place an order?</h3>
-                <p>You can place an order by filling out our order form or contacting our customer support team for assistance.</p>
-            </div>
-            <div class="question">
-                <h3>Is your service confidential?</h3>
-                <p>Yes, we ensure complete confidentiality of all our clients' personal information and order details.</p>
-            </div>
-        </section>
-    </main>
+    <section class="faq">
+        <h2>Frequently Asked Questions</h2>
+        <div class="question">
+            <h3>What services do you offer?</h3>
+            <p>We offer a wide range of academic writing services including essays, research papers, dissertations, and more.</p>
+        </div>
+        <div class="question">
+            <h3>How can I place an order?</h3>
+            <p>You can place an order by filling out our order form or contacting our customer support team for assistance.</p>
+        </div>
+        <div class="question">
+            <h3>Is your service confidential?</h3>
+            <p>Yes, we ensure complete confidentiality of all our clients' personal information and order details.</p>
+        </div>
+    </section>
+</main>
 
-    <a href="https://api.whatsapp.com/send/?phone=442032893891&text&type=phone_number&app_absent=0" class="whatsapp-float">
-        <img src="images/whatsapp-removebg-preview.png" class="whatsapp-icon">
-    </a>
+<a href="https://api.whatsapp.com/send/?phone=442032893891&text&type=phone_number&app_absent=0" class="whatsapp-float">
+    <img src="images/whatsapp-removebg-preview.png" class="whatsapp-icon">
+</a>
 
-    <script>
-       document.getElementById('hamburger').addEventListener('click', function () {
-    const navLinks = document.getElementById('nav-links');
-    navLinks.classList.toggle('show'); // Toggle the dropdown menu
-});
+<script>
+    // Toggle the hamburger menu
+    document.getElementById('hamburger').addEventListener('click', function () {
+        const navLinks = document.getElementById('nav-links');
+        navLinks.classList.toggle('show'); // Toggle the dropdown menu
+    });
 
-// Smooth scrolling for the Learn More button
-document.getElementById('learnMoreButton').addEventListener('click', function () {
-    const featuresSection = document.getElementById('features');
-    featuresSection.scrollIntoView({ behavior: 'smooth' });
-});
-
-       
-    </script>
+    // Smooth scrolling for the Learn More button
+    document.getElementById('learnMoreButton').addEventListener('click', function () {
+        const featuresSection = document.getElementById('features');
+        featuresSection.scrollIntoView({ behavior: 'smooth' });
+    });
+</script>
 </body>
 </html>
-
