--- a/index.html
+++ b/index.html
@@ -275,20 +275,39 @@ nav {
 
         @media (max-width: 768px) {
 
-             .nav-links {
+             
+             
+          @media (max-width: 768px) {
+    .nav-links {
         display: none; /* Hide nav links by default on mobile */
         flex-direction: column; /* Stack links vertically */
         position: absolute; /* Positioning for dropdown */
         top: 60px; /* Adjust to position under the nav */
         right: 0;
-        background-color: white; /* Background for dropdown */
+        background-color: #ffffff; /* Background color for dropdown */
         width: 100%; /* Full width */
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* More pronounced shadow */
+        border-radius: 5px; /* Rounded corners */
     }
 
     .nav-links.show {
         display: flex; /* Show nav links when hamburger is clicked */
     }
+
+    .nav-links a {
+        padding: 1rem; /* Increased padding for better spacing */
+        text-align: center;
+        width: 100%;
+        border-bottom: 1px solid #ddd; /* Divider between items */
+        transition: background-color 0.3s ease; /* Smooth background change */
+    }
+
+    .nav-links a:hover {
+        background-color: rgba(0, 123, 255, 0.1); /* Subtle hover effect */
+    }
+}
+   
+
 
     .hamburger {
         display: block; /* Show hamburger on mobile */
@@ -297,13 +316,7 @@ nav {
         display: flex;
     }
 
-    .nav-links a {
-        padding: 1rem;
-        text-align: center;
-        width: 100%;
-        border-bottom: 1px solid #ddd;
-    }
-
+   
    
 
     nav {
