--- a/index.html
+++ b/index.html
@@ -39,33 +39,26 @@ nav {
 }
     
 
-.nav-links {
-    display: none; /* Hide nav links by default on mobile */
-    flex-direction: column; /* Stack links vertically */
-    position: absolute; /* Positioning for dropdown */
-    top: 60px; /* Adjust to position under the nav */
-    right: 0;
-    background-color: white; /* Background for dropdown */
-    width: 100%; /* Full width */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Softer shadow */
-    border-radius: 5px; /* Rounded corners */
-}
 
-.nav-links.show {
-    display: flex; /* Show nav links when hamburger is clicked */
+.nav-links {
+    display: flex; /* Display nav links in desktop view */
+}
+        
+.nav-links li {
+    display: inline;
 }
 
 .nav-links a {
-    padding: 1rem; /* Padding for better spacing */
-    text-align: center;
-    width: 100%; /* Full width for each link */
-    border-bottom: 1px solid #ddd; /* Divider between links */
-    color: #333; /* Text color */
-    transition: background-color 0.3s ease; /* Smooth background color transition */
+    color: black; 
+    text-decoration: none;
+    padding: 1rem;
+    border-radius: 5px;
+    transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
 .nav-links a:hover {
-    background-color: rgba(0, 123, 255, 0.1); /* Subtle background on hover */
+    background-color: rgba(0, 123, 255, 0.6);
+    transform: scale(1.1);
 }
 
 .nav-links li {
