--- a/index.html
+++ b/index.html
@@ -266,18 +266,17 @@ nav {
         @media (max-width: 768px) {
 
              
-             
-          @media (max-width: 768px) {
     .nav-links {
         display: none; /* Hide nav links by default on mobile */
         flex-direction: column; /* Stack links vertically */
         position: absolute; /* Positioning for dropdown */
         top: 60px; /* Adjust to position under the nav */
         right: 0;
-        background-color: #ffffff; /* Background color for dropdown */
+        background-color: #34495e; /* Darker background for contrast */
         width: 100%; /* Full width */
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* More pronounced shadow */
-        border-radius: 5px; /* Rounded corners */
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); /* More pronounced shadow */
+        border-radius: 10px; /* More rounded corners */
+        z-index: 1000; /* Ensure it appears above other elements */
     }
 
     .nav-links.show {
@@ -285,15 +284,21 @@ nav {
     }
 
     .nav-links a {
-        padding: 1rem; /* Increased padding for better spacing */
+        padding: 15px 20px; /* Increased padding for better spacing */
         text-align: center;
-        width: 100%;
-        border-bottom: 1px solid #ddd; /* Divider between items */
-        transition: background-color 0.3s ease; /* Smooth background change */
+        color: #ffffff; /* Light text color for contrast */
+        text-decoration: none; /* Remove underline */
+        border-bottom: 1px solid rgba(255, 255, 255, 0.2); /* Lighter divider */
+        transition: background-color 0.3s ease, color 0.3s ease; /* Smooth transition */
     }
 
     .nav-links a:hover {
-        background-color: rgba(0, 123, 255, 0.1); /* Subtle hover effect */
+        background-color: #2980b9; /* Attractive hover background */
+        color: #ffffff; /* Maintain text color on hover */
+    }
+
+    .nav-links a:last-child {
+        border-bottom: none; /* Remove border for the last item */
     }
 }
    
