--- a/services.html
+++ b/services.html
@@ -13,6 +13,7 @@
             background-color: #f5f5f5;
             transition: background-color 0.3s ease;
             line-height: 1.6;
+            overflow-x: hidden;
         }
 
         header {
@@ -34,6 +35,16 @@
             max-width: 1500px;
             margin: auto;
         }
+
+        .services-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 2rem;
+    max-width: 100%;
+    box-sizing: border-box;
+    padding: 0 1rem;
+}
 
         .nav-links a {
             color: black;
