--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ nav {
 
 
 .hamburger {
-    display: none; /* Hide hamburger by default */
+  display: none;
     cursor: pointer;
     font-size: 30px;
 }
