--- a/index.html
+++ b/index.html
@@ -263,6 +263,10 @@ nav {
             }
         }
 
+        @media (min-width: 769px) {
+    .hamburger {
+        display: none; /* Hide hamburger on laptop and larger screens */
+    }
         @media (max-width: 768px) {
 
              
