--- a/index.html
+++ b/index.html
@@ -67,11 +67,10 @@ nav {
 
 
 .hamburger {
-  display: none;
+    display: none; /* Hidden by default */
     cursor: pointer;
     font-size: 30px;
 }
-
         .hero {
             height: 100vh;
             background: url('images/Artboard.jpg') no-repeat center center/cover;
