--- a/index.html
+++ b/index.html
@@ -67,10 +67,11 @@ nav {
 
 
 .hamburger {
-    display: none; /* Hidden by default */
+    display: none; /* Hide hamburger by default */
     cursor: pointer;
     font-size: 30px;
 }
+
         .hero {
             height: 100vh;
             background: url('images/Artboard.jpg') no-repeat center center/cover;
@@ -262,10 +263,6 @@ nav {
             }
         }
 
-        @media (min-width: 769px) {
-    .hamburger {
-        display: none; /* Hide hamburger on laptop and larger screens */
-    }
         @media (max-width: 768px) {
 
              
