--- a/order.html
+++ b/order.html
@@ -70,6 +70,7 @@
             text-align: center;
             padding: 0 2rem;
             margin-top: 0;
+            width: 100%;
         }
 
         .hero-content {
