--- a/order.html
+++ b/order.html
@@ -12,6 +12,7 @@
             padding: 0;
             background-color: #f5f5f5;
             line-height: 1.6;
+            overflow-x: hidden;
         }
     
         header {
