--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@ nav {
             &#9776; <!-- Hamburger icon -->
         </div>
         <ul class="nav-links" id="nav-links">
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="About us.html">About Us</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="Sample.html">Samples</a></li>
