--- a/pricing.html
+++ b/pricing.html
@@ -235,7 +235,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="About us.html">About Us</a></li>
                 <li><a href="services.html">Services</a></li>
-                <li><a href="Samples.html">Samples</a></li>
+                <li><a href="Sample.html">Samples</a></li>
                 <li><a href="pricing.html">Pricing</a></li>
                 <li><a href="order.html">Order</a></li>
             </ul>
