--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 header {
     background-color: rgba(255, 255, 255, 0.9);
-    color: black; 
+    color: brown; 
     width: 100%;
     position: fixed;
     top: 0;
