--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 }
 
 header {
-    background-color: rgba(255, 255, 255, 0.10);
-    color: brown; 
+    background-color: rgba(255, 255, 255, 0.7);
+    color: white; 
     width: 100%;
     position: fixed;
     top: 0;
