--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@ nav {
 
         .hero h1 {
             font-size: 3rem;
-            color: #fff;
-        }
+            color: black        }
 
         .hero p {
             font-size: 1.25rem;
@@ -383,7 +382,7 @@ nav {
 <main>
     <section class="hero" id="home">
         <div class="hero-content">
-            <h1>Welcome to Our Writing Service</h1>
+            <h1>Welcome to The Inscribe.co</h1>
             <p>Your one-stop solution for all your writing needs</p>
             <button id="learnMoreButton" class="learn-more-button">Learn More</button>
         </div>
