--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@ nav {
         }
 
         .hero h1 {
-            font-size: 3rem;
-            color: black        }
+            font-size: 5rem;
+            color: white        }
 
         .hero p {
             font-size: 1.25rem;
