--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         border-radius: 50%;
         border: 3px solid rgba(0, 123, 255, 0.6);
         padding: 5px;
-        background-color: white;
+        background-color: grey;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     }   
 
