--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
         .hero {
             height: 100vh;
-            background: url('images/Artboard.jpg') no-repeat center center/cover;
+            background: url('images/5.jpg') no-repeat center center/cover;
             color: white;
             display: flex;
             justify-content: center;
