--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
         .hero {
             height: 100vh;
-            background: url('images/5.jpg') no-repeat center center/cover;
+            background: url('images/5.jpeg') no-repeat center center/cover;
             color: white;
             display: flex;
             justify-content: center;
@@ -437,7 +437,7 @@
         </div>
     </section>
 
-    <section class="features" id="features">
+     <section class="features" id="features">
         <h2>Why Choose Us?</h2>
         <div class="feature">
             <img src="images/TQ.png" alt="Top Quality">
