--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
         .hero {
             height: 100vh;
-            background: url('images/5.jpeg') no-repeat center center/cover;
+            background: url('images/Artboard.jpg') no-repeat center center/cover;
             color: white;
             display: flex;
             justify-content: center;
@@ -126,7 +126,7 @@
 
         .hero h1 {
             font-size: 5rem;
-            color: white        }
+            color: black       }
 
         .hero p {
             font-size: 1.25rem;
@@ -432,7 +432,6 @@
     <section class="hero" id="home">
         <div class="hero-content">
             <h1>Welcome to The Inscribe.co</h1>
-            <p>Your one-stop solution for all your writing needs</p>
             <button id="learnMoreButton" class="learn-more-button">Learn More</button>
         </div>
     </section>
