--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
         .hero h1 {
             font-size: 5rem;
-            color: black       }
+            color: Dark blue       }
 
         .hero p {
             font-size: 1.25rem;
