--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         .hero {
             height: 100vh;
             background: url('images/Artboard.jpg') no-repeat center center/cover;
-            color: white;
+            color: Dark blue;
             display: flex;
             justify-content: center;
             align-items: center;
