--- a/index.html
+++ b/index.html
@@ -447,6 +447,11 @@
         }
     }
         }
+    @media (min-width: 769px) {
+    .hamburger {
+        display: none; /* Ensure the hamburger is hidden */
+    }
+}
     </style>
 </head>
 <body>
