--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
     background-color: #0056b3; /* Darker shade on hover */
     transform: scale(1.05); /* Slightly enlarge on hover */
 }
-        .pricing {
+.pricing {
     padding: 3rem 1rem;
     background-color: #f9f9f9;
     text-align: center;
@@ -364,6 +364,7 @@
     background-color: #0056b3;
     transform: scale(1.05);
 }
+
 
 
         .whatsapp-float {
@@ -593,30 +594,18 @@
         <div class="pricing-card">
             <h3>Normal Delivery</h3>
             <ul>
-                <li>Essay Writing (USD): $20 per page</li>
-                <li>Essay Writing (GBP): £15 per page</li>
-                <li>Essay Writing (EUR): €18 per page</li>
-                <li>Proofreading (USD): $10 per page</li>
-                <li>Proofreading (GBP): £8 per page</li>
-                <li>Proofreading (EUR): €9 per page</li>
-                <li>PowerPoint (USD): $15 per slide</li>
-                <li>PowerPoint (GBP): £12 per slide</li>
-                <li>PowerPoint (EUR): €14 per slide</li>
+                <li>USD: $20 per page</li>
+                <li>GBP: £15 per page</li>
+                <li>EUR: €18 per page</li>
             </ul>
             <a href="order.html" class="order-now">Order Now</a>
         </div>
         <div class="pricing-card">
             <h3>Urgent Delivery</h3>
             <ul>
-                <li>Essay Writing (USD): $40 per page</li>
-                <li>Essay Writing (GBP): £30 per page</li>
-                <li>Essay Writing (EUR): €36 per page</li>
-                <li>Proofreading (USD): $20 per page</li>
-                <li>Proofreading (GBP): £16 per page</li>
-                <li>Proofreading (EUR): €18 per page</li>
-                <li>PowerPoint (USD): $25 per slide</li>
-                <li>PowerPoint (GBP): £20 per slide</li>
-                <li>PowerPoint (EUR): €23 per slide</li>
+                <li>USD: $40 per page</li>
+                <li>GBP: £30 per page</li>
+                <li>EUR: €36 per page</li>
             </ul>
             <a href="order.html" class="order-now">Order Now</a>
         </div>
