--- a/index.html
+++ b/index.html
@@ -305,10 +305,11 @@
     background-color: #0056b3; /* Darker shade on hover */
     transform: scale(1.05); /* Slightly enlarge on hover */
 }
+
+
 .pricing {
     padding: 3rem 1rem;
-    
-     background-color: #e0e0e0;
+    background-color: #f9f9f9;
     text-align: center;
 }
 
@@ -351,7 +352,7 @@
     color: #333;
 }
 
-.order-now {
+.order-now, .more-details {
     display: inline-block;
     padding: 0.75rem 1.5rem;
     background-color: #007BFF;
@@ -359,12 +360,22 @@
     border-radius: 5px;
     text-decoration: none;
     transition: background-color 0.3s ease, transform 0.3s ease;
+    margin-top: 0.5rem;
 }
 
-.order-now:hover {
+.order-now:hover, .more-details:hover {
     background-color: #0056b3;
     transform: scale(1.05);
 }
+
+.more-details {
+    background-color: #28a745; /* Green background for more details button */
+}
+
+.more-details:hover {
+    background-color: #218838;
+}
+
 
 
 
@@ -600,6 +611,7 @@
                 <li>EUR: €18 per page</li>
             </ul>
             <a href="order.html" class="order-now">Order Now</a>
+            <a href="pricing.html" class="more-details">More Details</a>
         </div>
         <div class="pricing-card">
             <h3>Urgent Delivery</h3>
@@ -609,9 +621,11 @@
                 <li>EUR: €36 per page</li>
             </ul>
             <a href="order.html" class="order-now">Order Now</a>
+            <a href="pricing.html" class="more-details">More Details</a>
         </div>
     </div>
 </section>
+
 
 
      <section class="features" id="features">
