--- a/index.html
+++ b/index.html
@@ -475,6 +475,19 @@
 
         @media (max-width: 768px) {
 
+             .pricing-card {
+        transform: translateX(50%); /* Reduce the initial off-screen position */
+    }
+
+    .pricing-card.slide-in-left {
+        animation: slideInLeft 0.7s forwards;
+    }
+
+    .pricing-card.slide-in-right {
+        animation: slideInRight 0.7s forwards;
+    }
+}
+
              .sample {
         width: calc(50% - 2rem); /* Two in a row on tablets */
     }
@@ -742,7 +755,9 @@
         featuresSection.scrollIntoView({ behavior: 'smooth' });
     });
 
-    function isInViewport(element) {
+   
+    
+               function isInViewport(element) {
         const rect = element.getBoundingClientRect();
         return (
             rect.top >= 0 &&
@@ -752,26 +767,27 @@
         );
     }
 
+    // Function to add the sliding effect when the element is in view
     function handleScroll() {
         const pricingCards = document.querySelectorAll('.pricing-card');
 
         pricingCards.forEach((card, index) => {
             if (isInViewport(card)) {
+                // Apply the slide-in-left class for even-indexed cards and slide-in-right for odd ones
                 if (index % 2 === 0) {
-                    card.classList.add('slide-in-left'); // Left animation for even-indexed cards
+                    card.classList.add('slide-in-left');
                 } else {
-                    card.classList.add('slide-in-right'); // Right animation for odd-indexed cards
+                    card.classList.add('slide-in-right');
                 }
             }
         });
     }
 
-    // Trigger the animation when scrolling
+    // Listen to the scroll event
     window.addEventListener('scroll', handleScroll);
 
-    // Trigger the animation on page load in case the section is already in view
+    // Trigger on page load to check if the section is already in view
     window.addEventListener('load', handleScroll);
-
     
 </script>
 </body>
