--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 
 .pricing {
     padding: 3rem 1rem;
-    background-color: #f9f9f9;
+    background-color: #e0e0e0;
     text-align: center;
 }
 
