--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 .sample {
     background-color: white; /* White background for samples */
     margin: 1rem;
-    padding: 1rem;
+    padding: 5rem;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease;
@@ -288,7 +288,8 @@
 
 .sample p {
     font-size: 1rem;
-    color: #666; /* Dark grey for text */
+    color: #666;
+     text-align: justify;/* Dark grey for text */
 }
         .download-link {
     display: inline-block; /* Allows padding and margin */
