--- a/index.html
+++ b/index.html
@@ -649,15 +649,15 @@
         <h2>What Our Clients Say</h2>
         <div class="testimonial">
             <p>"The service was exceptional! My essay was well-written and delivered on time. Highly recommend!"</p>
-            <span>- Jane Doe</span>
+            <span>- Susan </span>
         </div>
         <div class="testimonial">
             <p>"Professional and reliable. I received a high-quality paper with zero plagiarism."</p>
-            <span>- John Smith</span>
+            <span>- John </span>
         </div>
         <div class="testimonial">
             <p>"Excellent customer service and top-notch writing skills. I will definitely use this service again."</p>
-            <span>- Emily Johnson</span>
+            <span>- Emily </span>
         </div>
     </section>
 
