--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
         margin-top: 40px; /* Adjusts the header position below the top bar */
     }
 
-    .hamburger {
-    display: none; /* Hidden by default */
-}  
+     .hamburger {
+            display: none; /* Show by default */
+        }
 
  nav {
         display: flex;
