--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
 
             .question h3 {
                 font-size: 1rem;
-            }
+            }}
 
              @media (max-width: 576px) {
         .feature {
@@ -561,8 +561,8 @@
     }
         }
     @media (min-width: 769px) {
-    .hamburger {
-        display: none; /* Ensure the hamburger is hidden */
+     .hamburger {
+        display: block; /* Show hamburger on mobile */
     }
 }
     </style>
