--- a/index.html
+++ b/index.html
@@ -455,10 +455,9 @@
 
 
 
-        @media (max-width: 768px) {
+   @media (max-width: 768px) {
 
-    
-            .sample {
+    .sample {
         width: calc(50% - 2rem); /* Two in a row on tablets */
     }
 
@@ -468,7 +467,7 @@
         position: absolute; /* Positioning for dropdown */
         top: 60px; /* Adjust to position under the nav */
         right: 0;
-        background-color: #34495e; /* Darker background for contrast */
+        background-color: transparent; /* Set transparent background for nav links container */
         width: 100%; /* Full width */
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); /* More pronounced shadow */
         border-radius: 10px; /* More rounded corners */
@@ -480,12 +479,14 @@
     }
 
     .nav-links a {
-        padding: 1rem 2rem; /* Increased padding for bigger buttons */
+        padding: 1rem; /* Padding for spacing inside each box */
+        margin: 0.5rem 0; /* Margin to separate each link box */
+        background-color: #34495e; /* Background color for each link box */
+        border-radius: 8px; /* Rounded corners for each link box */
         font-size: 1.2rem; /* Larger font size for better readability */
         text-align: center;
         color: #ffffff; /* Light text color for contrast */
         text-decoration: none; /* Remove underline */
-        border-bottom: 1px solid rgba(255, 255, 255, 0.2); /* Lighter divider */
         transition: background-color 0.3s ease, color 0.3s ease; /* Smooth transition */
     }
 
@@ -544,6 +545,10 @@ nav {
 .question h3 {
     font-size: 1rem;
 }}
+
+    
+
+
 
     </style>
 </head>
