--- a/index.html
+++ b/index.html
@@ -457,6 +457,8 @@
 
   @media (max-width: 768px) {
 
+    @media (max-width: 768px) {
+
     .sample {
         width: calc(50% - 2rem); /* Two in a row on tablets */
     }
@@ -467,7 +469,7 @@
         position: absolute; /* Positioning for dropdown */
         top: 60px; /* Adjust to position under the nav */
         right: 0;
-        background-color: #34495e; /* Background color for the dropdown */
+        background-color: #34495e; /* Darker background for contrast */
         width: 100%; /* Full width */
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); /* More pronounced shadow */
         border-radius: 10px; /* More rounded corners */
@@ -480,8 +482,8 @@
     }
 
     .nav-links a {
-        padding: 1rem 1.5rem; /* Padding for spacing inside each box */
-        margin: 0.5rem 0; /* Margin to separate each link box */
+        padding: 1rem 1.5rem; /* Increased padding for better spacing */
+        margin: 0.75rem 0; /* Increased margin to separate each link box */
         background-color: #2980b9; /* Background color for each link box */
         border-radius: 8px; /* Rounded corners for each link box */
         font-size: 1.2rem; /* Larger font size for better readability */
@@ -499,6 +501,7 @@
     .nav-links a:last-child {
         border-bottom: none; /* Remove border for the last item */
     }
+}
 
 .hamburger {
     display: block; /* Show hamburger on mobile */
@@ -545,11 +548,6 @@ nav {
 .question h3 {
     font-size: 1rem;
 }
-  }
-
-
-
-
 
     </style>
 </head>
