--- a/order.html
+++ b/order.html
@@ -29,7 +29,22 @@
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             backdrop-filter: blur(50px);
         }
+      .footer {
+    background-color: #333; /* Dark background */
+    color: #fff; /* White text */
+    padding: 20px; /* Padding */
+    text-align: center; /* Center text */
+}
 
+.footer-content p {
+    margin: 5px 0; /* Space between paragraphs */
+}
+
+.footer-bottom {
+    border-top: 1px solid #444; /* Top border */
+    margin-top: 10px; /* Margin above */
+    padding-top: 10px; /* Padding above */
+}
         nav {
             display: flex;
             justify-content: space-between;
@@ -357,6 +372,13 @@
             </div>
         </section>
     </main>
+     <footer>
+        <p>&copy; 2024 Your Website Name. All rights reserved.</p>
+        <div class="footer-links">
+            <a href="privacy.html">Privacy Policy</a>
+            <a href="terms.html">Terms of Service</a>
+        </div>
+    </footer>
     <a href="https://api.whatsapp.com/send/?phone=442032893891&text&type=phone_number&app_absent=0" class="whatsapp-float">
         <img src="images/whatsapp-removebg-preview.png" class="whatsapp-icon">
     </a>
