--- a/order.html
+++ b/order.html
@@ -373,10 +373,12 @@
         </section>
     </main>
      <footer>
-        <p>&copy; 2024 Your Website Name. All rights reserved.</p>
-        <div class="footer-links">
-            <a href="privacy.html">Privacy Policy</a>
-            <a href="terms.html">Terms of Service</a>
+        <div class="footer-content">
+            <p>Contact Us: <a href="mailto:info@example.com">inscribe@gmail.com</a></p>
+            <p>Since 2011</p>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2011 The Inscribeco. All rights reserved.</p>
         </div>
     </footer>
     <a href="https://api.whatsapp.com/send/?phone=442032893891&text&type=phone_number&app_absent=0" class="whatsapp-float">
