--- a/order.html
+++ b/order.html
@@ -256,6 +256,7 @@
 
         /* Responsive Styles */
         @media (max-width: 768px) {
+            
             .hero h1 {
                 font-size: 2rem;
             }
@@ -269,25 +270,60 @@
                 padding: 1.5rem; /* Less padding */
             }
 
-            .nav-links {
-                flex-direction: column; /* Stack nav links */
-                padding: 1rem;
-                position: absolute;
-                top: 60px; /* Below the header */
-                background: rgba(255, 255, 255, 0.9); /* Background for the menu */
-                display: none; /* Initially hidden */
-                z-index: 999; /* Ensure it appears above other content */
-                width: 100%; /* Full width for mobile menu */
-            }
+           .nav-links {
+        display: none; /* Hide nav links by default on mobile */
+        flex-direction: column; /* Stack links vertically */
+        position: absolute; /* Positioning for dropdown */
+        top: 60px; /* Adjust to position under the nav */
+        right: 0;
+        background-color: #34495e; /* Darker background for contrast */
+        width: 100%; /* Full width */
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); /* More pronounced shadow */
+        border-radius: 10px; /* More rounded corners */
+        z-index: 1000; /* Ensure it appears above other elements */
+        padding: 1rem; /* Padding around the dropdown for better spacing */
+    }
 
-            .nav-links.show {
-                display: flex; /* Show on toggle */
-            }
+    .nav-links.show {
+        display: flex; /* Show nav links when hamburger is clicked */
+    }
 
-            .hamburger {
-                display: block; /* Show hamburger icon */
-                cursor: pointer;
-            }
+    .nav-links a {
+        padding: 1rem 1.5rem; /* Increased padding for better spacing */
+        margin: 0.75rem 0; /* Increased margin to separate each link box */
+        background-color: #2980b9; /* Background color for each link box */
+        border-radius: 8px; /* Rounded corners for each link box */
+        font-size: 1.2rem; /* Larger font size for better readability */
+        text-align: center;
+        color: #ffffff; /* Light text color for contrast */
+        text-decoration: none; /* Remove underline */
+        transition: background-color 0.3s ease, color 0.3s ease; /* Smooth transition */
+    }
+
+    .nav-links a:hover {
+        background-color: #3498db; /* Attractive hover background */
+        color: #ffffff; /* Maintain text color on hover */
+    }
+
+    .nav-links a:last-child {
+        border-bottom: none; /* Remove border for the last item */
+    }
+}
+
+.hamburger {
+    display: block; /* Show hamburger on mobile */
+}
+
+.nav-links.active {
+    display: flex;
+}
+
+nav {
+    justify-content: space-between;
+}
+
+
+            
         }
 
         @media (max-width: 480px) {
