--- a/order.html
+++ b/order.html
@@ -29,7 +29,7 @@
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             backdrop-filter: blur(50px);
         }
-      .footer {
+      footer {
     background-color: #333; /* Dark background */
     color: #fff; /* White text */
     padding: 20px; /* Padding */
